--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "google-auth-library": "^9.11.0",
     "googleapis": "^140.0.1",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18"
